--- a/FullAPI.Cinema/appsettings.json
+++ b/FullAPI.Cinema/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Default": "Server=localhost;Database=Cinema;Integrated Security=SSPI;TrustServerCertificate=true;"
+    "Default": "Server=172.24.128.1;Database=Cinema;User id=MatteoAdmin;Password=MatteoAdmin;TrustServerCertificate=true;"
   },
   "Logging": {
     "LogLevel": {
