Update docker compose

--- a/FullAPI.Cinema/appsettings.json
+++ b/FullAPI.Cinema/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "Default": "Server=172.24.128.1;Database=Cinema;User id=MatteoAdmin;Password=MatteoAdmin;TrustServerCertificate=true;"
+    //"Default": "Server=172.24.128.1;Database=Cinema;User id=MatteoAdmin;Password=MatteoAdmin;TrustServerCertificate=true;"
+    "Default": "Server=.;Database=Cinema;User id=sa;Password=DockerTest1!;TrustServerCertificate=true;"
   },
   "Logging": {
     "LogLevel": {
